@@ -1,5 +1,10 @@
 # $Id$
 
+2007-02-10	Dmitry E. Demidov
+
+	* core/Form/Primitives/ExplodedPrimitive.class.php: added support of 
+	regexp separator.
+
 2007-02-09	Konstantin V. Arkhipov
 
 	* main/Utils/ClassUtils.class.php: return value are omitted now for
